# OXDK

./: .gitignore  .gitmodules  README.md  oxdk.mk
cmake/: hosttools.cmake  hosttoolsprivate.cmake  resolvehostdeps.cmake  rulesoverride.cmake  sdl2x.cmake  sdlx.cmake  toolchain.cmake
docs/: CMAKE.md  DEVELOPMENT.md
oxdk/libcxx-config/: __config_site
oxdk/libcxx-cshim/: math.h
oxdk/libcxx-shim/: libcxx_runtime.cpp
samples/: CMakeLists.txt
samples/d3d/hello/: CMakeLists.txt  Makefile  lld_workaround.cpp  main.cpp
samples/libcxx/cxx17_hello/: CMakeLists.txt  Makefile  main.cpp
samples/libsdlx/sdl_test/: CMakeLists.txt  Makefile  README.md  sdl_test.cpp  xbox_platform.c
samples/sdl2x/: CMakeLists.txt
samples/sdl2x/loopwave/: Makefile
samples/sdl2x/plasma/: Makefile
samples/sdl2x/retronova/: Makefile
samples/sdl2x/scene/: Makefile  scene.cpp
samples/sdl2x/starfield/: Makefile
samples/sdl2x/testdraw2/: Makefile
samples/sdl2x/testgamecontroller/: Makefile
samples/sdl2x/testscale/: Makefile
samples/sdl2x/testsprite2/: Makefile
samples/sdl2x/waves/: Makefile
tools/cxbe/: CMakeLists.txt
tools/xbx/: README.md
tools/xbx/go/: build-all.sh  go.mod  main.go
